--- a/django-py3/BGPInspector/bgpWebApp/templates/bgpWebApp/query.html
+++ b/django-py3/BGPInspector/bgpWebApp/templates/bgpWebApp/query.html
@@ -5,12 +5,13 @@
 
 {% block headers %}
 {% load staticfiles %}
-<script src={% static 'bgpWebApp/js/result_handler.js' %}></script>
-<script src={% static 'bgpWebApp/js/oboe-browser.js' %}></script>
-<script src='//cdnjs.cloudflare.com/ajax/libs/bootstrap-select/1.7.5/js/bootstrap-select.min.js'></script>
-<script src='//cdn.datatables.net/1.10.10/js/jquery.dataTables.min.js'></script>
-<link rel="stylesheet" type="text/css" href='//cdn.datatables.net/1.10.10/css/jquery.dataTables.min.css' />
-<link rel="stylesheet" type="text/css" href='//cdnjs.cloudflare.com/ajax/libs/bootstrap-select/1.7.5/css/bootstrap-select.min.css' />
+<script src="{% static 'bgpWebApp/js/result_handler.js' %}"></script>
+<script src="{% static 'bgpWebApp/js/query.js' %}"></script>
+<script src="{% static 'bgpWebApp/js/libs/oboe-browser.js' %}"></script>
+<script src="{% static 'bgpWebApp/js/libs/bootstrap-select.min.js' %}"></script>
+<script src="{% static 'bgpWebApp/js/libs/jquery.dataTables.min.js' %}"></script>
+<link rel="stylesheet" type="text/css" href="{% static 'bgpWebApp/css/libs/jquery.dataTables.min.css' %}"/>
+<link rel="stylesheet" type="text/css" href="{% static 'bgpWebApp/css/libs/bootstrap-select.min.css' %}" />
 <link rel="stylesheet" type="text/css" href="{% static 'bgpWebApp/css/query.css' %}" />
 <link rel="stylesheet" type="text/css" href="{% static 'bgpWebApp/css/query_builder.css' %}" />
 {% endblock %}
@@ -21,7 +22,7 @@
 		<div id="query_addition">
 		</div>
 		<div id="query">
-			{% include 'bgpWebApp/gui.html' %}
+			{% include 'bgpWebApp/query_builder.html' %}
 		</div>
 	</div>
 	<div id="result">
