--- a/django-py3/BGPInspector/bgpWebApp/templates/bgpWebApp/base.html
+++ b/django-py3/BGPInspector/bgpWebApp/templates/bgpWebApp/base.html
@@ -54,8 +54,12 @@
 						</div>
 						<div id="navbarCollapse" class="collapse navbar-collapse">
 							<ul class="nav navbar-nav">
-								<li><a href="{% url 'bgpWebApp:index' %}">Home</a></li>
-								<li><a href="{% url 'bgpWebApp:query' %}">Query</a></li>
+								<li {% if current_link == 'home' %} class="active_link" {% endif %}>
+									<a href="{% url 'bgpWebApp:index' %}">Home</a>
+								</li>
+								<li {% if current_link == 'query' %} class="active_link" {% endif %}>
+									<a href="{% url 'bgpWebApp:query' %}">Query</a>
+								</li>
 							</ul>
 						</div>
 					</div>
